<resources>
    <string name="app_name">Hangman</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Settings</string>
    <string name="configurations">Configurations</string>
    <string name="welcome_hangman">Hangman by Usama</string>
    <string name="setting_title">Settings</string>
    <string name="welcome">Home</string>
    <string name="red_back">Red Background</string>
    <string name="blue_back">Blue Background</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="config">Game Configurations</string>
    <string name="hangman_title">Hangman 2.0</string>
    <string name="game_instructions">A word with some missing alphabets is shown below. You can try 7 seven times to guess the word right. Good Luck!</string>
    <string name="guess">Guess</string>
    <string name="submit">Submit</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">Want to Play Again? :)</string>
    <string name="home">Home</string>
</resources>
