<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#170D0D"
    android:backgroundTint="#1361A5"
    tools:context=".ui.hangman.GameFragment">


    <TextView
        android:id="@+id/game_title"
        android:layout_width="261dp"
        android:layout_height="77dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/hangman_title"
        android:textColor="#F6F4F4"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="351dp"
        android:layout_height="66dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/game_instructions"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/game_title"
        app:layout_constraintStart_toStartOf="@+id/game_title"
        app:layout_constraintTop_toBottomOf="@+id/game_title" />

    <TextView
        android:id="@+id/word_textView"
        android:layout_width="230dp"
        android:layout_height="77dp"
        android:layout_marginTop="56dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="@+id/instructions"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/instructions"
        app:layout_constraintTop_toBottomOf="@+id/instructions" />

    <EditText
        android:id="@+id/usertry_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/guess"
        android:textColor="#F6F5F5"
        app:layout_constraintEnd_toEndOf="@+id/word_textView"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/word_textView"
        app:layout_constraintTop_toBottomOf="@+id/word_textView" />

    <Button
        android:id="@+id/gameOver_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/usertry_editText"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/usertry_editText"
        app:layout_constraintTop_toBottomOf="@+id/word_textView"
        app:layout_constraintVertical_bias="0.611" />

</androidx.constraintlayout.widget.ConstraintLayout>