<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#170D0D"
    android:backgroundTint="#1361A5"
    tools:context=".ui.hangman.WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/welcome_pic"
        android:layout_width="wrap_content"
        android:layout_height="117dp"
        android:layout_marginTop="104dp"
        android:src="@drawable/hangman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="84dp"
        android:text="@string/setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcome_pic" />

    <Button
        android:id="@+id/config_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/configurations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcome_pic"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="@+id/welcome_pic"
        tools:text="@string/configurations" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="344dp"
        android:text="@string/welcome_hangman"
        android:textColor="#F3F0F0"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcome_pic"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/welcome_pic"
        app:layout_constraintTop_toBottomOf="@+id/welcome_pic"
        app:layout_constraintVertical_bias="0.744" />

</androidx.constraintlayout.widget.ConstraintLayout>